RESOLVED FIXED294208
Fix the internal visionOS build after 295983@main
https://bugs.webkit.org/show_bug.cgi?id=294208
Summary Fix the internal visionOS build after 295983@main
Charlie Wolfe
Reported 2025-06-09 09:16:59 PDT
...
Attachments
Charlie Wolfe
Comment 1 2025-06-09 09:17:56 PDT
Charlie Wolfe
Comment 2 2025-06-09 09:18:09 PDT
EWS
Comment 3 2025-06-09 09:23:03 PDT
Committed 295999@main (98f62d6b03f3): <https://commits.webkit.org/295999@main> Reviewed commits have been landed. Closing PR #46503 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.