Fix the internal visionOS build after 295983@main https://bugs.webkit.org/show_bug.cgi?id=294208 rdar://152845435

Unreviewed.

* Source/WebCore/platform/graphics/cocoa/DynamicContentScalingDisplayList.h:

Canonical link: https://commits.webkit.org/295999@main